--- a/templates/static/styles/form_page.css
+++ b/templates/static/styles/form_page.css
@@ -2,39 +2,12 @@
     left: 0;
     top: 0;
     position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgba(22,56,27,0.8);
+    width: 100vw;
+    height: 100vh;
     color:lightgray;
+    background: rgba(22,56,27,0.8);
     display: none;
 }
-#form_page_wrapper{
-    margin: auto;
-    margin-top: 10%;
-    width: 30%;
-}
-#info_form_stylisticstop img{
-    width: 100%;
-    height: auto;
-    margin: auto;
-}
-#info_form_stylisticstop{
-    margin: auto;
-    width:100%;
-}
-#info_form_stylisticsbottom img{
-    width: 100%;
-    height: auto;
-    margin: auto;
-}
-#info_form_stylisticsbottom{
-    margin: auto;
-    width:100%;
-}
-#give_info_form{
-    margin:auto;
-}
-
 input[type=text] {
     background-color: transparent;
     border: 1px solid gold;
@@ -64,16 +37,15 @@ option{
    border-radius: 2px;
 }
 #info_form_wrapper{
-    padding-top: 5%;
-    padding-bottom: 5%;
-    padding-left: 30px;
     -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
     background: rgba(32,80,39,.8);
     border: 1px solid gold;
-    width:60%;
-    margin:auto;
-    margin-top: 7%;
-    margin-bottom: 7%;
+}
+#info_form_wrapper{
+    color: white;
+}
+input, select, textarea{
+    color:lightgray;
 }
